tests/baselines/reference/derivedStructWithPrivateInstanceShadowingPublicInstance.errors.txt
tests/cases/conformance/structs/members/inheritanceAndOverriding/derivedStructWithPrivateInstanceShadowingPublicInstance.ts(20,10): error TS20018: Property 'fn' is private and only accessible within struct 'Derived'.


==== tests/cases/conformance/structs/members/inheritanceAndOverriding/derivedStructWithPrivateInstanceShadowingPublicInstance.ts (1 errors) ====
    // doc 2.3
    
    struct Base {
        public fn(): string {
            return '';
        }
    }
    
    // error, not a subtype
    struct Derived extends Base {
        private fn(): string {
            return '';
        }
    }
    
    var b: Base;
    var d: Derived;
    
    var r1 = b.fn(); // ok
    var r2 = d.fn(); // error
             ~~~~
!!! error TS20018: Property 'fn' is private and only accessible within struct 'Derived'.
    var r3 = (<Base>d).fn; // ok